--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,10 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/qfpuksur/public_html/upliftmusic/
-    - /bin/cp -R assets $DEPLOYPATH
-    - /bin/cp -R forms $DEPLOYPATH
+    - /bin/cp -R old $DEPLOYPATH
+    - /bin/cp -R css $DEPLOYPATH
+    - /bin/cp -R fonts $DEPLOYPATH
+    - /bin/cp -R images $DEPLOYPATH
+    - /bin/cp -R js $DEPLOYPATH
     - /bin/cp *.* $DEPLOYPATH
     
