--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,9 +3,7 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/qfpuksur/public_html/upliftmusic/
     - /bin/cp -R old $DEPLOYPATH
-    - /bin/cp -R css $DEPLOYPATH
-    - /bin/cp -R fonts $DEPLOYPATH
-    - /bin/cp -R images $DEPLOYPATH
-    - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
+    - /bin/cp -R vendor $DEPLOYPATH
     - /bin/cp *.* $DEPLOYPATH
     
