fixed cpanle yml

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,7 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/qfpuksur/public_html/upliftmusic/
-    - /bin/cp -R old $DEPLOYPATH
+    - /bin/cp -R test $DEPLOYPATH
     - /bin/cp -R assets $DEPLOYPATH
     - /bin/cp -R vendor $DEPLOYPATH
     - /bin/cp *.* $DEPLOYPATH
